<?xml version="1.0"?>
<package>
  <name>poppy_ergo_jr_controllers</name>
  <version>0.0.0</version>
  <description>Poppy Ergo Jr ROS controllers and joint state publisher</description>
  <maintainer email="yoan.mollard@inria.fr">Yoan Mollard</maintainer>
  <license>GPL3</license>
  <url type="website">https://www.poppy-project.org/</url>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
